pilar3-despliegue/kubernetes/infrastructure/rabbitmq-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: voxchain
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
