pilar3-despliegue/kubernetes/infrastructure/redis-sentinel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  namespace: voxchain
spec:
  selector:
    app: redis-sentinel
  ports:
    - port: 26379
      targetPort: 26379
      name: sentinel
