pilar3-despliegue/kubernetes/infrastructure/redis-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-external
  namespace: voxchain
  annotations:
    networking.gke.io/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: redis
    statefulset.kubernetes.io/pod-name: redis-0
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
