pilar3-despliegue/kubernetes/infrastructure/redis-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: voxchain
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
