pilar3-despliegue/kubernetes/infrastructure/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voxchain
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
